tests/out/type_mismatch.test
Cog: Type Error: (4:22): cannot implicitly convert from 'int' to 'cstr'
    ----> tests/type_mismatch.cg
       |
     3 |func main() {
     4 |     let age: cstr = 40;
       |                     ^~ 

cog: 1 semantic errors occurred
Cog: compilation aborted
